--- a/Readme
+++ b/Readme
@@ -1,1 +1,1 @@
-This script finds Active Directory group membership of an user using the email id. Large organizations use multiple Proxy PAC files based on user location/ department etc. These PAC files are pushed to user machines using Active Directory group policies based upon AD group membership of the user. However, most organizations doesn't encourage contacting business users unless it's necessary. This script/ tool helps Network/ Security engineer to find the AD group membership of  an user in order to figure out the proxy PAC in use.
+This script finds Active Directory group membership of an user using the email id. Large organizations use multiple Proxy PAC files based on user location/ department etc. These PAC files are pushed to user machines using Active Directory group policies based upon AD group membership of the user. Although proxy PAC settings can be obtained from the user, many organizations do not encourage contacting business users unless it's absolutely necessary. This script/ tool can help Network/ Security engineers to find the AD group membership of an user in order to figure out the proxy PAC in force for an user.
